src/objects/Apttus_XApps__UserXAuthorApp__c.object
<CustomObject>
    <description>Assignment of X-Author for Excel App to user or profile</description>
    <fields>
        <fullName>Apttus_XApps__ApplicationId__c</fullName>
        <description>X-Author Application ID</description>
        <label>Application</label>
        <referenceTo>Apttus_XApps__Application__c</referenceTo>
        <relationshipName>UserXAuthorApps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__ProfileId__c</fullName>
        <description>ID of the user profile</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID of the user profile</inlineHelpText>
        <label>Profile</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who can be assigned to a X-Author Excel app</description>
        <inlineHelpText>User who can be assigned to a X-Author Excel app</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserXAuthorApps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>App Assignment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Assignment ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>